# isi

./: README.md  yarp_install.sh.template
athleteBot/: README.TXT  add_athletebot.cpp  admin.ini  back.ppm  fakebot.ini
athleteBot/athleteInterface/: CMakeLists.txt  adder.cpp  adder.h  athletebot.ini
athleteBot/athleteInterface/src/: AthleteBot.cpp  AthleteBot.h
athleteBot/athletebot/: AthleteBot.cpp  config.cmake
conf/: yarpmotorgui.ini
src/athleteInterface/src/: AthleteBot.h
